<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:id="@+id/parent_store_page_layout"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/form_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/layout_store_page_photo"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"

                android:layout_centerInParent="true"

                app:srcCompat="@drawable/store_4" />

            <TextView
                android:id="@+id/layout_store_page_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@+id/layout_store_page_photo"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp"

                android:textColor="@color/colorTextPrimaryDark"
                android:text="Store Name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!--  ========================  ImageView for each Icon ======================== -->

            <ImageView
                android:id="@+id/layout_store_page_address_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/layout_store_page_name"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_store_address" />

            <ImageView
                android:id="@+id/layout_store_page_website_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/layout_store_page_address_icon"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_store_website" />

            <ImageView
                android:id="@+id/layout_store_page_phone_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/layout_store_page_website_icon"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_store_phone" />

            <ImageView
                android:id="@+id/layout_store_page_rating_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/layout_store_page_phone_icon"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_store_rating" />

            <ImageView
                android:id="@+id/layout_store_page_hours_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/layout_store_page_rating_icon"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_store_hours" />

            <!--  ========================  TextView for each Icon ======================== -->

            <TextView
                android:id="@+id/layout_store_page_address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="22.5dp"
                android:layout_marginLeft="10dp"

                android:layout_below="@+id/layout_store_page_name"
                android:layout_toRightOf="@+id/layout_store_page_address_icon"

                android:text="Store Address"
                android:textColor="@color/colorTextPrimaryDark"
                />

            <TextView
                android:id="@+id/layout_store_page_website_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@+id/layout_store_page_address_text"
                android:layout_marginLeft="10dp"

                android:layout_marginTop="26.5dp"
                android:layout_toRightOf="@+id/layout_store_page_website_icon"
                android:text="Website Link"
                android:textColor="@color/colorTextPrimaryDark"
                />

            <TextView
                android:id="@+id/layout_store_page_phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@+id/layout_store_page_website_text"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"

                android:layout_marginTop="26.5dp"
                android:layout_toRightOf="@+id/layout_store_page_phone_icon"
                android:text="Store Address"
                android:textColor="@color/colorTextPrimaryDark"
                />

            <TextView
                android:id="@+id/layout_store_page_rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@+id/layout_store_page_phone_text"
                android:layout_marginLeft="10dp"

                android:layout_marginTop="26.5dp"
                android:layout_toRightOf="@+id/layout_store_page_rating_icon"
                android:text="Store Address"
                android:textColor="@color/colorTextPrimaryDark"
                />

            <TextView
                android:id="@+id/layout_store_page_hours_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@+id/layout_store_page_rating_text"
                android:layout_marginLeft="10dp"

                android:layout_marginTop="26.5dp"
                android:layout_toRightOf="@+id/layout_store_page_rating_icon"
                android:text="Monday\nTuesday\nWednesday\nThursday\nFriday\nSaturday\nSunday"
                android:textColor="@color/colorTextPrimaryDark"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>