...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.HomeActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/all_suggested_recipes_card_view"
        android:layout_height = "120dp"
        android:layout_width = "380dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="44dp"
        style="@style/CustomCardView"
        app:layout_constraintEnd_toEndOf="parent"
...
